# version-make

./: .editorconfig  Cargo.toml  Makefile  Makefile.toml  README.md  _build.yml
.github/workflows/: build.yml  release.yml  rust.yml  upver.yml
examples/: temp.rs
samples/: Cargo.toml  package.json  pyproject.toml  vue.config.js
src/: main.rs
src/lib/: mod.rs  version.rs
tests/: manager.rs  version.rs
