[package]
name = "upver"
version = "0.202003.3"
authors = ["fuyutarow <fuyutarow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
structopt = "0.3.9"
semver = "0.9.0"
toml = "0.5.6"
regex = "1.3.4"


