[package]
name = "version-make"
version = "0.202004.16"
authors = ["fuyutarow <fuyutarow@gmail.com>"]
edition = "2018"

[lib]
name = "cli"
path = "src/lib/mod.rs"



[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
structopt = "0.3.9"
semver = "0.9.0"
toml = "0.5.6"
regex = "1.3.4"
enum = "0.0.0"

