[tool.poetry]
name = "utils"
version = "0.1.1"
description = ""
authors = ["fuyutarow <fuyutarow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
maya = "^0.6.1"
pandas = "^1.2.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
